--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"prefix": "/",
-	"token": "NzIwMjExMzEyMTk3NTAwOTkw.Xus5hA.EyTiTdfO_6MyMKBa-jg1KQ97pac",
+	"token": "<your token>",
 	"meaning_of_life": 42,
 	"passwords_array": ["please", "dont", "hack", "me"],
 	"secret_passcodes": {
