--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Jack061231",
+  "author": "your name",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.2.0"
